# libbuffer

./: CMakeLists.txt  Makefile  README  binio.c  buffer.h  conv.c  conv.h  core.c  hexio.c  libbuffer.h  misc.c  private.h  release.sh
include/makestuff/: libbuffer.h
src/: binio.c  conv.c  conv.h  core.c  hexio.c  misc.c  private.h
tests/: Makefile  testBinIO.cpp  testConv.cpp  testCore.cpp  testHexIO.cpp
